--- a/index.html
+++ b/index.html
@@ -1,57 +1,183 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html lang="en" class="element">
 <head>
-  <meta charset="utf-8">
-  <title>Karandeep Singh</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div class="top-container">
-    <img class="top-cloud" src="images/clouds.png" alt="cloud-img">
-    <h1>I'm Karandeep.</h1>
-    <h3 class="subtitle">an Android and Web Developer.</h3>
-    <img class="bottom-cloud" src="images/clouds.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
-  </div>
-  <div class="middle-container">
-    <div class="profile">
-      <img style="border-radius: 50%;" src="images/karandeep.jpeg" alt="abhinav-sharma" height="200px" width="200px">
-      <h2>Hello there! &#128075;</h2>
-      <p style="width: 50%; margin: auto auto 20px auto; line-height: 2;">I'm a mobile application developer and a web designer/developer based in Delhi, India. I have a passion for coding and love to develop apps and websites with interactive UI. And also I am a huge Cricket fan &#128513;</p>
-    </div>
-    <hr>
-    <div class="skills">
-      <h2>MY SKILLS</h2>
-      <div class="skill-row">
-        <img class="android-img" src="images/smartphone.png" alt="androidDev" height="200px" width="200px">
-        <h3>Designing and Development</h3>
-        <p>I started learning to code when I was 15 years old beacuse I wanted to make my own video game. Overtime, I have gained a wealth of experience designing and developing mobile and web application.</p>
-      </div>
-      <div class="skill-row">
-        <img class="basketball-img" src="images/cricket.png" alt="basketball" height="200px" width="200px">
-        <h3>Cricket Love</h3>
-        <p>I love to play Cricket and I have played professionally at university level and also I am a huge fan of IPL,but Team India is love.</p>
-      </div>
-    </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If you wanna hire me or you wanna develop together.</h3>
-      <p style="margin-bottom: -5px;">Love Cricket as much as I do? Let's talk about the current IND v/s NZ Series then!</p>
-      <p style="margin-bottom: 50px;">And we will code while doing that.</p>
-      <a class="btn" href="mailto:karandeep041998@gmail.com">CONTACT ME</a>
-    </div>
-  </div>
-  <div class="bottom-container">
-    <a style="margin-right: 20px;" href="https://www.linkedin.com/in/karandeep-singh-24a952190/" target="_blank"><img src="images/linkedin.png" alt="linkedin" height="50px" width="50px"></a>
-    <a style="margin-right: 10px; margin-left: 10px;" href="https://www.instagram.com/karandeep_singh04/" target="_blank"><img src="images/instagram.png" alt="instagram" height="50px" width="50px"></a>
-    <a style="margin-left: 20px;" href="https://www.github.com/karandeep98" target="_blank"><img src="images/github.png" alt="github" height="50px" width="50px"></a>
-    <p style="font-size: 14px; color: #ffffff">© 2020 Karandeep Singh. All rights reserved.</p>
-  </div>
-</body>
+    <div class="nav">
 
+        <div class="circle"></div>
+        <a href="mailto:karandeep041998@gmail.com?subject=I%20would%20like%20to%20hire%20you&body=" class="hire-me-button">
+          HIRE ME
+        </a>
+        <div class="menu">
+            <a class="menu-items" href="#AboutMe-section">About Me</a>
+            <a class="menu-items" href="#skills-section">Skills</a>
+            <a class="menu-items" href="#projects-section">Projects</a>
+            <a class="menu-items" href="#experience-section">Experience</a>
+        </div>
+        <div class="socialIcons">
+            <a href="https://www.linkedin.com/in/karandeep98"><img width="35" height="35" src="linkedin.svg"></a>
+            <a href="https://wa.me/918383887458?text=Hey%20Karandeep,%20I%20would%20like%20to%20hire%20you"><img width="35" height="35" src="whatsapp.png"></a>
+            <!-- <a href="https://www.instagram.com/karandeep_singh04/"><img src="social-media.png" width="35" height="35"/></a> -->
+            <a href="http://github.com/karandeep98"><img width="35" height="35" src="https://image.flaticon.com/icons/png/512/25/25231.png"/></a>
+
+
+        </div>
+
+    </div>
+    <div class="realBody">
+        <section class="section section-1" id="AboutMe-section">
+
+               <h1 class="container1-h1" >About Me</h1>
+               <p class="container1-para">
+                I am Karandeep Singh, a Computer Science Engineering Student in 3rd year.<br><br>
+                Apart from that I like to build Android Apps. <br><br>
+                I belong from Delhi and I am good at Android Development, Front End Web development and Competitive Programming.
+              I want to become a successful professional in the field of computer science and make the world a better place to live
+               <br> <br> My Hobbies are watching videos and learning new technologies
+            </p>
+
+        </section >
+
+        <section class="section section-2" id="skills-section">
+
+            <h1 class="container1-h1" >Technical Skills</h1>
+
+
+            <div class="skill-container">
+              <div class="skill-card">
+                <h4>
+                  Competitive Coder
+                </h4>
+                <p>
+                  Proficient in C++<br>
+                  Intermediate in Java
+                </p>
+                <!-- <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    70% Complete
+                  </div>
+                </div> -->
+              </div>
+              <div class="skill-card">
+                <h4>
+                  Android App Developer
+                </h4>
+                <p>
+                  Using Java as well as Kotlin
+                </p>
+                <!-- <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    70% Complete
+                  </div>
+                </div> -->
+              </div>
+              <!-- <div class="skill-card">
+                <h4>
+                  Database Management
+                </h4>
+                <p>
+                  Using MySQL
+                </p>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    70% Complete
+                  </div>
+                </div>
+              </div> -->
+              <div class="skill-card">
+
+                <h4>
+                  IT Constructs
+                </h4>
+                <p>
+                  Data Structures, Algorithms, Object Oriented Programming,DBMS using MySQL
+                </p>
+                <!-- <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    70% Complete
+                  </div>
+                </div> -->
+              </div>
+              <div class="skill-card">
+
+                <h4>
+                  Development tools
+                </h4>
+                <p>
+                  Android Studio, Code::Blocks,IntelliJ IDEA, Atom, Visual Studio Code
+                </p>
+                <!-- <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    70% Complete
+                  </div>
+                </div> -->
+              </div>
+              <!-- <div class="skill-card">
+                <h4>
+                  PCB Designing
+                </h4>
+                <p>
+                  Kicad, Oscilloscope, voltage analyser, Power electronics, MATLAB, etc.
+                </p>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    70% Complete
+                  </div>
+                </div>
+              </div> -->
+
+            </div>
+        </section>
+
+        <section class="section section-3">
+
+          <h1 class="container1-h1" id="experience-section">Internships </h1>
+          <div class="section-3-container">
+            <p>
+            <strong>  Android Developer Intern  30/06/2020 - 30/07/2020</strong><br>
+ <i>SoloCoin App, Tethics Technologies Pvt Ltd</i><br>
+Worked as a Team Lead on adding core functionalities
+of the app including Developing UI, Integrating APIs,
+adding background services, following MVVM
+architecture throughout and deploying the final app to
+playstore.
+            </p>
+          </div>
+          <div class="section-3-container">
+            <p>
+            <strong>  Software Developer Intern 27/05/2020 - 08/07/2020 </strong><br>
+ <i>RevMeUp Tech Pvt. Ltd.</i><br>
+ Worked in a Team on adding key features of the app
+ including Login Module, Performance optimizations,
+ reducing data consumption, better UI and smooth
+ background services. Also collaborated with crossfunctional teams to define, design, and ship new
+ features.
+            </p>
+          </div>
+          <div class="section-3-container">
+            <p>
+            <strong>  Software Engineering Intern 22/08/2019 - 22/10/2019 </strong><br>
+ <i>Fortknight Innovations Pvt. Ltd.</i><br>
+Worked in a Team on developing Management Systems
+for Delhi Police and many other clients as well. Also
+converted the applications in more than 15 regional
+languages spoken all over India.
+            </p>
+          </div>
+        </section>
+    </div>
+</body>
 </html>
