--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <a class="menu-items" href="#experience-section">Experience</a>
         </div>
         <div class="socialIcons">
-            <a href="https://www.linkedin.com/in/karandeep98"><img width="35" height="35" src="linkedin.svg"></a>
-            <a href="https://wa.me/918383887458?text=Hey%20Karandeep,%20I%20would%20like%20to%20hire%20you"><img width="35" height="35" src="whatsapp.png"></a>
+            <a href="https://www.linkedin.com/in/karandeep98"><img width="35" height="35" src="images/linkedin.svg"></a>
+            <a href="https://wa.me/918383887458?text=Hey%20Karandeep,%20I%20would%20like%20to%20hire%20you"><img width="35" height="35" src="images/whatsapp.png"></a>
             <!-- <a href="https://www.instagram.com/karandeep_singh04/"><img src="social-media.png" width="35" height="35"/></a> -->
             <a href="http://github.com/karandeep98"><img width="35" height="35" src="https://image.flaticon.com/icons/png/512/25/25231.png"/></a>
 
